# src/routes/reservas.ts
@@ -3,14 +3,11 @@ import { ReservationController } from "../controllers/ReservationController"
 
 const router = express.Router()
 
-router.route("/")
-    .get(ReservationController.getAllReservations)
-    .post(ReservationController.createReserve)
-router.route("/:id")
-    .get(ReservationController.getReserve)
-    .put(ReservationController.updateReserve)
-    .delete(ReservationController.deleteReserve)
-router.route("/getByDate")
-    .post(ReservationController.getReservationsByDate)
+router.route("/").get(ReservationController.getAllReservations)
+router.route("/create").post(ReservationController.createReserve)
+router.route("/:id").get(ReservationController.getReserve)
+router.route("/update/:id").put(ReservationController.updateReserve)
+router.route("/delete/:id").delete(ReservationController.deleteReserve)
+router.route("/getByDate").post(ReservationController.getReservationsByDate)
 
 export { router }
